--- a/odom_tf_publisher/package.xml
+++ b/odom_tf_publisher/package.xml
@@ -11,8 +11,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>nav_msgs</depend>
-  <depend>tf</depend>
-  <depend>tf_conversions</depend>
+  <depend>tf2_ros</depend>
   <depend>eigen_conversions</depend>
 
 </package>
