--- a/tftree_merger/package.xml
+++ b/tftree_merger/package.xml
@@ -10,8 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>tf</depend>
-  <depend>tf_conversions</depend>
+  <depend>tf2_ros</depend>
   <depend>eigen_conversions</depend>
 
 </package>
