--- a/com_tf_publisher/package.xml
+++ b/com_tf_publisher/package.xml
@@ -14,5 +14,6 @@
   <depend>tf</depend>
   <depend>tf_conversions</depend>
   <depend>eigen_conversions</depend>
+  <depend>choreonoid</depend>
 
 </package>
