--- a/base_footprint_publisher/CMakeLists.txt
+++ b/base_footprint_publisher/CMakeLists.txt
@@ -3,7 +3,7 @@ project(base_footprint_publisher)
 
 
 set(CMAKE_BUILD_TYPE Release)
-add_compile_options(-std=c++11)
+set(CMAKE_CXX_STANDARD 14)
 
 find_package(catkin REQUIRED COMPONENTS
   tf2_ros
