--- a/odom_tf_publisher/CMakeLists.txt
+++ b/odom_tf_publisher/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(odom_tf_publisher)
 
 set(CMAKE_BUILD_TYPE Release)
-add_compile_options(-std=c++11)
+set(CMAKE_CXX_STANDARD 14)
 
 find_package(catkin REQUIRED COMPONENTS
   nav_msgs
