--- a/tftree_merger/CMakeLists.txt
+++ b/tftree_merger/CMakeLists.txt
@@ -3,7 +3,7 @@ project(tftree_merger)
 
 
 set(CMAKE_BUILD_TYPE Release)
-add_compile_options(-std=c++11)
+set(CMAKE_CXX_STANDARD 14)
 
 find_package(catkin REQUIRED COMPONENTS
   tf2_ros
